<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="6dp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp" />

        <EditText
            android:id="@+id/etNombreTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ejemplo_tarea_programacion"
            android:inputType="text"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripcionn"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/etDescripcionTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ejemplo_elaborar_ejercicios_1_y_2"
            android:inputType="text"/>


        <CheckBox
            android:id="@+id/cbIsCompleted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Marcar como completada"
            android:textStyle="italic"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btnAgregarTarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/agregar_tarea"
            android:backgroundTint="@color/btnAgregarTask"/>


    </LinearLayout>


</androidx.cardview.widget.CardView>