<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.History">

    <TextView
        android:id="@+id/tvHistorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/historial_de_tareas"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvFiltrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filtrar_historial_por_tipo_de_accion"
        app:layout_constraintTop_toBottomOf="@id/tvHistorial"
        android:layout_marginStart="15dp"
        android:textSize="15dp"
        android:layout_marginTop="10dp"/>

    <Spinner
        android:id="@+id/SpnAccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvFiltrar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/tvFiltrarFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filtrar_por_fecha"
        app:layout_constraintTop_toBottomOf="@id/SpnAccion"
        android:layout_marginStart="15dp"
        android:textSize="15dp"
        android:layout_marginTop="10dp"/>


    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="299dp"
        android:layout_height="299dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFiltrarFecha" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHistory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendarView"
        app:layout_constraintVertical_bias="0.0" />




</androidx.constraintlayout.widget.ConstraintLayout>